<resources>
    <string name="app_name">Luas at a Glance</string>
    <string name="title_activity_default_stop_select">Select Default Stop</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_favourites_select">Select Favourites</string>
    <string name="title_activity_license">License</string>
    <string name="title_activity_maps">Luas Map</string>
    <string name="title_activity_news_luas_news">Luas News</string>
    <string name="title_activity_news_travel_updates">Travel Updates</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_whats_new">What\'s New</string>
    <string name="title_activity_widget_select_stops">Select stops for widget</string>
    <string name="tab_red_line">Red Line</string>
    <string name="tab_green_line">Green Line</string>
    <string name="none">None</string>
    <string name="message_title">Status</string>
    <string name="message_no_status">No status message received from server. The Luas RTPI system
        may be down.
    </string>
    <string name="message_error"> Error retrieving info from Luas RTPI system.\n\nPlease check
        your network connection. If there are no issues, the Luas RTPI system may be down.
    </string>
    <string name="select_stop_using_picker">Select a stop using the picker above</string>
    <string name="inbound">Inbound</string>
    <string name="outbound">Outbound</string>
    <string name="northbound">Northbound</string>
    <string name="southbound">Southbound</string>
    <string name="westbound">Westbound</string>
    <string name="eastbound">Eastbound</string>
    <string name="tap_to_set_reminder">Tap to set reminder</string>
    <string name="due">DUE</string>
    <string name="min">min</string>
    <string name="mins">mins</string>
    <string name="no_trams_forecast"><b>No trams forecast</b></string>
    <string name="no_trams_forecast_short"><b>No trams due</b></string>
    <string name="bottomnav_map_short">Map</string>
    <string name="bottomnav_favourites_short">Faves</string>
    <string name="tap_to_load_times"><b>Tap to load times</b></string>
    <string name="cannot_schedule_notification">Tram is due shortly. Cannot schedule notification.
    </string>
    <string name="please_allow_notification_permissions">Please allow notification permissions
        through your device\'s settings.</string>
    <string name="action_about">About</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_news">Luas News</string>
    <string name="action_news_alert">Alerts</string>
    <string name="action_settings">Settings</string>
    <string name="action_trams">Trams</string>
    <string name="about_title_version">Version</string>
    <string name="about_title_description">Description</string>
    <string name="about_description">Android app providing real-time tram stop
        information for Dublin\'s Luas light rail service.</string>
    <string name="about_title_license">Open source license</string>
    <string name="about_license"><u>GNU General Public License (GPLv3)</u></string>
    <string name="about_title_source_bugs_features">Source code, bugs and feature requests</string>
    <string name="about_source_bugs_features">github.com/thecosmicfrog/luasataglance</string>
    <string name="about_title_map_data">Map data</string>
    <string name="about_map_data">Map data © OpenStreetMap contributors, available under the Open Database License (ODbL) 1.0. Tiles
        by OpenFreeMap, © OpenMapTiles.</string>
    <string name="about_map_data_url" translatable="false">openstreetmap.org/copyright</string>
    <string name="about_title_privacypolicy">Privacy policy</string>
    <string name="about_privacypolicy" translatable="false">luasataglance.thecosmicfrog.org/privacy"
    </string>
    <string name="about_developed_by">Developed by Aaron Hastings (thecosmicfrog)</string>
    <string name="about_irish_translations">Irish translations by Feidhlim Seoighe and Marcas Ó
        Duinn</string>
    <string name="content_desc_action_bar_up_description">Navigate up</string>
    <string name="content_desc_bottomnav_alerts">Alerts button</string>
    <string name="content_desc_bottomnav_favourites">Favourites button</string>
    <string name="content_desc_bottomnav_map">Luas Map button</string>
    <string name="content_desc_map_close">Close Luas Map</string>
    <string name="content_desc_map_chevron">Open this stop</string>
    <string name="content_desc_map_directions">Directions to this stop</string>
    <string name="content_desc_map_my_location">Show my location</string>
    <string name="content_desc_tabbar_menu">Settings menu</string>
    <string name="content_desc_widget_next_stop">Next stop</string>
    <string name="content_desc_widget_prev_stop">Previous stop</string>
    <string name="favourites_title">Favourites</string>
    <string name="favourites_edit">Edit favourites</string>
    <string name="favourites_none_selected">Let\'s get started!\n\nTap the <b>Edit</b> button
        in the bottom-right corner of this screen to start adding your most frequently-used Luas stops.
    </string>
    <string name="favourites_save_selected">Save selected</string>
    <string name="map_style_url" translatable="false">https://tiles.openfreemap.org/styles/bright</string>
    <string name="map_location_unavailable">Your location is not available yet.</string>
    <string name="notification_title">Time to leave!</string>
    <string name="notification_tram_expected">Your tram is expected in\u0020</string>
    <string name="notification_minute">\u0020minute.</string>
    <string name="notification_minutes">\u0020minutes.</string>
    <string name="notify_set">Schedule</string>
    <string name="notify_when">When would you like to be notified about this tram?</string>
    <string name="notify_successful">Notification scheduled.</string>
    <string name="notify_replaces_existing">This will replace your previously scheduled notification.</string>
    <string name="notify_unsuccessful_exact_alarm">Notification creation failed. Please grant app permission to set exact alarms."
    </string>
    <string name="notify_invalid_time">Invalid time: Tram expected before then.</string>
    <string name="rationale_ask_accept" translatable="false">Grant permission</string>
    <string name="rationale_ask_decline" translatable="false">No thanks</string>
    <string name="rationale_location" translatable="false">Luas at a Glance can optionally show your
        location on the map, making it easier for you to find your nearest Luas stop.</string>
    <string name="rationale_notifications" translatable="false">Luas at a Glance requires permission
        to notify you when your tram is due.</string>
    <string name="rationale_exact_alarm" translatable="false">We also need permission to set accurate reminders. Please enable
        us to do this on the next screen.</string>
    <string name="pref_title_default_stop">Default stop</string>
    <string name="pref_key_default_stop" translatable="false">default_stop</string>
    <string name="pref_default_stop_save">Set default stop</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_key_theme" translatable="false">theme</string>
    <string name="pref_entry_theme_system">System</string>
    <string name="pref_entry_theme_light">Light</string>
    <string name="pref_entry_theme_dark">Dark</string>
    <string name="pref_value_theme_system" translatable="false">system</string>
    <string name="pref_value_theme_light" translatable="false">light</string>
    <string name="pref_value_theme_dark" translatable="false">dark</string>
    <string-array name="array_theme_entries">
        <item>@string/pref_entry_theme_system</item>
        <item>@string/pref_entry_theme_light</item>
        <item>@string/pref_entry_theme_dark</item>
    </string-array>
    <string-array name="array_theme_values">
        <item>@string/pref_value_theme_system</item>
        <item>@string/pref_value_theme_light</item>
        <item>@string/pref_value_theme_dark</item>
    </string-array>
    <string name="welcome_title">Welcome to\nLuas at a Glance</string>
    <string name="welcome_theme_prompt">Choose how the app should look</string>
    <string name="welcome_theme_hint">You can change this at any time in <b>Settings</b>.</string>
    <string name="welcome_get_started">Get started</string>
    <string name="whatsnew_title_current" translatable="false">Version %s (%s)</string>
    <string name="whatsnew_content_current" translatable="false">
        \u2022 Fixed issue where "Gleann Bhríde" would not appear when using Irish (Gaeilge) as the device language.\n
        \u2022 Fixed intermittent crash.
    </string>
    <string name="widget_arrow_left">\u25C0</string>
    <string name="widget_arrow_right">\u25B6</string>
    <string name="widget_message_configure"><b>Please configure widget</b></string>
    <string name="widget_message_error"><b>Network error</b></string>
    <string name="widget_select_confirm">Confirm</string>
    <string name="widget_select_at_least_one_stop">Please select at least one stop</string>
    <string name="stop_tpt">The Point</string>
    <string name="stop_sdk">Spencer Dock</string>
    <string name="stop_mys">Mayor Square - NCI</string>
    <string name="stop_gdk">George\'s Dock</string>
    <string name="stop_con">Connolly</string>
    <string name="stop_bus">Busáras</string>
    <string name="stop_abb">Abbey Street</string>
    <string name="stop_jer">Jervis</string>
    <string name="stop_fou">Four Courts</string>
    <string name="stop_smi">Smithfield</string>
    <string name="stop_mus">Museum</string>
    <string name="stop_heu">Heuston</string>
    <string name="stop_jam">James\'s</string>
    <string name="stop_fat">Fatima</string>
    <string name="stop_ria">Rialto</string>
    <string name="stop_sui">Suir Road</string>
    <string name="stop_gol">Goldenbridge</string>
    <string name="stop_dri">Drimnagh</string>
    <string name="stop_bla">Blackhorse</string>
    <string name="stop_blu">Bluebell</string>
    <string name="stop_kyl">Kylemore</string>
    <string name="stop_red">Red Cow</string>
    <string name="stop_kin">Kingswood</string>
    <string name="stop_bel">Belgard</string>
    <string name="stop_coo">Cookstown</string>
    <string name="stop_hos">Hospital</string>
    <string name="stop_tal">Tallaght</string>
    <string name="stop_fet">Fettercairn</string>
    <string name="stop_cvn">Cheeverstown</string>
    <string name="stop_cit">Citywest Campus</string>
    <string name="stop_for">Fortunestown</string>
    <string name="stop_sag">Saggart</string>
    <string name="stop_bro">Broombridge</string>
    <string name="stop_cab">Cabra</string>
    <string name="stop_phi">Phibsborough</string>
    <string name="stop_gra">Grangegorman</string>
    <string name="stop_brd">Broadstone - DIT</string>
    <string name="stop_dom">Dominick</string>
    <string name="stop_par">Parnell</string>
    <string name="stop_oup">O\'Connell - Upper</string>
    <string name="stop_ogp">O\'Connell - GPO</string>
    <string name="stop_mar">Marlborough</string>
    <string name="stop_wes">Westmoreland</string>
    <string name="stop_try">Trinity</string>
    <string name="stop_daw">Dawson</string>
    <string name="stop_sts">St. Stephen\'s Green</string>
    <string name="stop_har">Harcourt</string>
    <string name="stop_cha">Charlemont</string>
    <string name="stop_ran">Ranelagh</string>
    <string name="stop_bee">Beechwood</string>
    <string name="stop_cow">Cowper</string>
    <string name="stop_mil">Milltown</string>
    <string name="stop_win">Windy Arbour</string>
    <string name="stop_dun">Dundrum</string>
    <string name="stop_bal">Balally</string>
    <string name="stop_kil">Kilmacud</string>
    <string name="stop_sti">Stillorgan</string>
</resources>