<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".MainActivity">

    <item
        android:id="@+id/action_news_alert"
        android:title="@string/action_news_alert"
        android:icon="@drawable/ic_error_outline_red"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/action_news"
        android:title="@string/action_news"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="70"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>