<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2015-2026 Aaron Hastings

    This file is part of Luas at a Glance.

    Luas at a Glance is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Luas at a Glance is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Luas at a Glance.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/LuasAtAGlanceDialogContent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/cardview_laag_elevation"
        app:cardCornerRadius="@dimen/cardview_laag_corner_radius">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="@dimen/activity_vertical_margin">

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/Base.DialogWindowTitle.AppCompat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/on_surface"
                        android:layout_toStartOf="@id/imageview_about_laag_logo"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/imageview_about_laag_logo"
                        android:layout_width="@dimen/laag_logo_size"
                        android:layout_height="@dimen/laag_logo_size"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/app_name"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_version"
                    android:textColor="@color/on_surface"
                    android:textStyle="bold"
                    android:paddingTop="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_name"
                    android:textColor="@color/on_surface" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_source_bugs_features"
                    android:textColor="@color/on_surface"
                    android:textStyle="bold"
                    android:paddingTop="16dp" />

                <TextView
                    android:id="@+id/textview_sourcecode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_source_bugs_features"
                    android:textColor="@color/on_surface"
                    android:autoLink="web" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_license"
                    android:textColor="@color/on_surface"
                    android:textStyle="bold"
                    android:paddingTop="16dp" />

                <TextView
                    android:id="@+id/textview_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_license"
                    android:textColor="@color/text_link" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_map_data"
                    android:textColor="@color/on_surface"
                    android:textStyle="bold"
                    android:paddingTop="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_map_data"
                    android:textColor="@color/on_surface" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_map_data_url"
                    android:textColor="@color/text_link"
                    android:autoLink="web" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_title_privacypolicy"
                    android:textColor="@color/on_surface"
                    android:textStyle="bold"
                    android:paddingTop="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_privacypolicy"
                    android:textColor="@color/text_link"
                    android:autoLink="web" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_developed_by"
                    android:textColor="@color/on_surface"
                    android:textStyle="bold"
                    android:paddingTop="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_irish_translations"
                    android:textColor="@color/on_surface"
                    android:textStyle="bold"
                    android:paddingTop="16dp" />
            </LinearLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
