<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="org.thecosmicfrog.luasataglance.activity.FavouritesDialog">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Base.DialogWindowTitle.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourites_title"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <ImageButton
            android:id="@+id/imagebutton_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/luas_purple"
            android:background="@color/luas_purple"
            android:src="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/favourites_edit" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textview_favourites_none_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/favourites_none_selected"
        android:textSize="22sp"
        android:background="@android:color/white"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listview_favourite_stops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>
